add: saudade + wip nadir + technical tag for filter

--- a/html/projects/video-games.html
+++ b/html/projects/video-games.html
@@ -51,6 +51,7 @@
       style="justify-content: flex-start; width: 75%;"
     >
       <a class="btn1 filter-active-btn" onclick="filterSelection('all')">ALL</a>
+      <a class="btn1" onclick="filterSelection('technical')">TECHNICAL</a>
       <a class="btn1" onclick="filterSelection('work')">WORK</a>
       <a class="btn1" onclick="filterSelection('school')">SCHOOL</a>
       <a class="btn1" onclick="filterSelection('jam')">JAM</a>
