--- a/html/projects/video-games/saudade.html
+++ b/html/projects/video-games/saudade.html
@@ -40,7 +40,7 @@
 
     <section id="blog-section" class="div-row">
         <div class="div-column">
-            <p id="hashtags"><b>2024</b> <b>Unity</b></p>
+            <p id="hashtags"><b>2024</b> <b>Unity</b> <b>Wwise</b></p>
             <p>For GMTK JAM 2024, I participated in a team of three with <a class="link-in-text" href="https://x.com/hookariagames" target="_blank">Paci</a> and <a class="link-in-text" href="https://x.com/ZakkuMusic" target="_blank">Zakku</a>. Exceptionally this year the jam was four days long. I was the main programmer, with a little help from Paci the last two days as I had to work on monday and tuesday.</p>
             <p>The concept of the game was fairly simple. Inspired by the jam theme "Built to scale" we decided to make a mix between <a class="link-in-text" href="https://store.steampowered.com/app/1794680/Vampire_Survivors/" target="_blank">Vampire Survivors</a> and <a class="link-in-text" href="https://store.steampowered.com/app/848350/Katamari_Damacy_REROLL/" target="_blank">Katamari Damacy</a>, where the player needs to eat the monsters all around to grow bigger and make enough point that they can feed themselves to the boss. They need to do so in time (2 minutes per round) otherwise it's game over.</p>
             <div class="div-row" style="width: 100%; height: 40rem; margin-bottom: 1rem;">
