--- a/html/projects/video-games/space-love-blouge.html
+++ b/html/projects/video-games/space-love-blouge.html
@@ -40,7 +40,7 @@
 
     <section id="blog-section" class="div-row">
         <div class="div-column">
-            <p id="hashtags"><b>2023</b> <b>Unity</b> <b>Alternative Output</b> <b>Alternative Controller</b></p>
+            <p id="hashtags"><b>2023</b> <b>Unity</b> <b>Alternative Output</b> <b>Alternative Controller</b> <b>FMOD</b></p>
             <p>In october 2023 we took up the challenge to make a game in a week that used an alternative output (something that was not simply a screen). It was a project included in the curriculum of our school (ENJMIN) and we were a team of ten. I was the main programmer on the Unity project while the other programmer worked on the Arduino side of the game.</p>
             <p>The idea we had was to make a two player cooperation game where each player wears glasses. One has red glasses and the other has blue ones. That way, both players will see different things based on the color they have (for example blue light will look the same as "no light / black" for the player wearing red glasses cause it will be absorbed by the color filter).</p>
             <p>Based on this concept, we designed a game where each player see enemies that they can't shoot themselves. Instead, they are forced to communicate the enemies' positions to the other player and cooperate to defend the planet in the middle of the screen. For example : red can see red but can only shoot blue !</p>
