add: nadir finish

--- a/html/projects/video-games/nadir-giant-hunter.html
+++ b/html/projects/video-games/nadir-giant-hunter.html
@@ -88,7 +88,7 @@
                 </div>
 
                 <div style="width: 32%;">
-                    <img style="width: 100%; margin-bottom: 0;" src="../../../img/video-games/nadir/ngh-cone-raycast-radius-step.png"> 
+                    <img src="../../../img/video-games/nadir/ngh-cone-raycast-radius-step.png" style="width: 100%; margin-bottom: 0;"> 
                     <p><i>Example of several radius step</i></p>
                 </div>
             </div> 
@@ -105,16 +105,38 @@
 
             <h3>Gameplay</h3>
             <p>For the swinging of the player itself, we used a <a class="link-in-text" href="https://store.steampowered.com/app/378070/Energy_Hook/" target="_blank">SpringJoint</a> and added an impulse on start and end of the swing. We tweaked a lot of stuff to try and get a more juicy movement - still inspiring ourselves from Spider-Man. If you want to try it out, you can play the game on the <a class="link-in-text" href="https://boolti.itch.io/nadirgianthunter" target="_blank">itch.io page</a>.</p>
-            <p>In Nadir the player can interact with three types of "spots" when they are close enough. The enemis' weak spot, the dash spot and the bumpers. </p>
+            <p>In Nadir the player can interact with three types of "spots" when they are close enough. The enemis' weak spot to kill them, the dash spot (to dash...) and the bumpers to jump super high. </p>
+            <div class="div-row" style="width: 100%;">
+                <div style="width: 32%;">
+                    <img src="../../../img/video-games/nadir/ngh-dash-spot.gif" style="width: 100%; margin-bottom: 0;"> 
+                    <p><i>Dash spot</i></p>
+                </div>
+                <div style="width: 32%;">
+                    <img src="../../../img/video-games/nadir/ngh-enemy-weak-spot.gif" style="width: 100%; margin-bottom: 0;"> 
+                    <p><i>Enemy weak spot</i></p>
+                </div>
+                <div style="width: 32%;">
+                    <img src="../../../img/video-games/nadir/ngh-bumper.gif" style="width: 100%; margin-bottom: 0;"> 
+                        <p><i>Bumper</i></p>
+                </div>
+            </div> 
 
             <h3>Gamepad and UI</h3>
             <p>Nadir is a gamepad first game, with fully remappable inputs.</p>
             <p>Since we wanted to participate to the Busan Indie Connect Festival, I set up the Unity Localization System on the project. That way the game was playable in English, French and Korean.</p>
-            <p>Below a quick video that shows the UI of the main menu and the available settings : </p>
-            <div class="div-row" style="width: 100%; height: 30rem; margin-bottom: 1rem;">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/cwqaQXGEpMw?si=dLFjcijnUp664nSq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
-            <p>WIP</p>
+            <p>We also added a quick tutorial that explains the goal of the game and the different controls !</p>
+            <div class="div-row" style="width: 100%;">
+                <div style="width: 49%;">
+                    <div style="width: 100%; margin-bottom: 1rem; height:14vw;">
+                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/cwqaQXGEpMw?si=dLFjcijnUp664nSq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        <p><i>Main menu and settings UI</i></p>
+                    </div>
+                </div>
+                <div style="width: 49%;">
+                    <img src="../../../img/video-games/nadir/ngh-tutorial.gif" style="width: 100%; margin-bottom: 0;"> 
+                    <p><i>Tutorial</i></p>
+                </div>
+            </div> 
         </div>
 
         <div class="div-column">
