feat: highlight text on nadir + image order

--- a/html/projects/video-games/nadir-giant-hunter.html
+++ b/html/projects/video-games/nadir-giant-hunter.html
@@ -105,16 +105,16 @@
             <p>Looking back on it, it <span class="text-highlight">might have been a good idea</span> to do the raycast on a <span class="text-highlight">separate thread with batch raycasting</span> like in this video : <a class="link-in-text" href="https://www.youtube.com/watch?v=WrzrtMxLgpc" target="_blank">RAYCASTING Made Insanely Fast for Collision Detection !</a>. Hopefully I'll have the occasion to look into that in another project.</p>
 
             <h3>Gameplay</h3>
-            <p>For the swinging of the player itself, we used a <a class="link-in-text" href="https://store.steampowered.com/app/378070/Energy_Hook/" target="_blank">SpringJoint</a> and added an impulse on start and end of the swing. We tweaked a lot of stuff to try and get a more juicy movement - still inspiring ourselves from Spider-Man. If you want to try it out, you can play the game on the <a class="link-in-text" href="https://boolti.itch.io/nadirgianthunter" target="_blank">itch.io page</a>.</p>
-            <p>In Nadir the player can interact with three types of "spots" when they are close enough. The enemis' weak spot to kill them, the dash spot (to dash...) and the bumpers to jump super high. </p>
+            <p>For the swinging of the player itself, we used a <a class="link-in-text" href="https://store.steampowered.com/app/378070/Energy_Hook/" target="_blank">SpringJoint</a> and added an <span class="text-highlight">impulse on start and end of the swing</span>. We tweaked a lot of stuff to try and get a more <span class="text-highlight">juicy movement</span> - still inspiring ourselves from Spider-Man. If you want to try it out, you can play the game on the <a class="link-in-text" href="https://boolti.itch.io/nadirgianthunter" target="_blank">itch.io page</a>.</p>
+            <p>In Nadir the player can interact with three types of "spots" when they are close enough. <span class="text-highlight">The enemis' weak spot to kill them, the dash spot (to dash...) and the bumpers to jump super high</span>. </p>
             <div class="div-row" style="width: 100%;">
-                <div style="width: 32%;">
-                    <img src="../../../img/video-games/nadir/ngh-dash-spot.gif" style="width: 100%; margin-bottom: 0;"> 
-                    <p><i>Dash spot</i></p>
-                </div>
                 <div style="width: 32%;">
                     <img src="../../../img/video-games/nadir/ngh-enemy-weak-spot.gif" style="width: 100%; margin-bottom: 0;"> 
                     <p><i>Enemy weak spot</i></p>
+                </div>
+                <div style="width: 32%;">
+                    <img src="../../../img/video-games/nadir/ngh-dash-spot.gif" style="width: 100%; margin-bottom: 0;"> 
+                    <p><i>Dash spot</i></p>
                 </div>
                 <div style="width: 32%;">
                     <img src="../../../img/video-games/nadir/ngh-bumper.gif" style="width: 100%; margin-bottom: 0;"> 
@@ -123,9 +123,9 @@
             </div> 
 
             <h3>Gamepad and UI</h3>
-            <p>Nadir is a gamepad first game, with fully remappable inputs.</p>
-            <p>Since we wanted to participate to the Busan Indie Connect Festival, I set up the Unity Localization System on the project. That way the game was playable in English, French and Korean.</p>
-            <p>We also added a quick tutorial that explains the goal of the game and the different controls !</p>
+            <p>Nadir is a <span class="text-highlight">gamepad first game</span>, with <span class="text-highlight">fully remappable inputs</span>.</p>
+            <p>Since we wanted to participate to the Busan Indie Connect Festival, I set up the Unity <span class="text-highlight">Localization System</span> on the project. That way the game was <span class="text-highlight">playable in English, French and Korean</span>.</p>
+            <p>We also added a quick <span class="text-highlight">tutorial</span> that explains the goal of the game and the different controls !</p>
             <div class="div-row" style="width: 100%;">
                 <div style="width: 49%;">
                     <div style="width: 100%; margin-bottom: 1rem; height:14vw;">
