--- a/html/projects/video-games/chase-tag.html
+++ b/html/projects/video-games/chase-tag.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alvina DR | Chase Tag</title>
+    <title>Alvina DR | Chase Tag (online)</title>
 
     <link rel="stylesheet" href="../../../css/main.css">
     <link rel="stylesheet" href="../../../css/text.css">
@@ -35,7 +35,7 @@
     
     <div class="grid grid-blog"></div>
     <section id="landing-blog-section">
-        <h1>Chase Tag</h1>
+        <h1>Chase Tag (online)</h1>
     </section>
 
     <section id="blog-section" class="div-row">
