--- a/html/projects/video-games/saudade.html
+++ b/html/projects/video-games/saudade.html
@@ -41,8 +41,11 @@
     <section id="blog-section" class="div-row">
         <div class="div-column">
             <p id="hashtags"><b>2024</b> <b>Unity</b> <b>Wwise</b></p>
-            <p>For GMTK JAM 2024, I participated in a team of three with <a class="link-in-text" href="https://x.com/hookariagames" target="_blank">Paci</a> and <a class="link-in-text" href="https://x.com/ZakkuMusic" target="_blank">Zakku</a>. Exceptionally this year the jam was four days long. I was the main programmer, with a little help from Paci the last two days as I had to work on monday and tuesday.</p>
-            <p>The concept of the game was fairly simple. Inspired by the jam theme "Built to scale" we decided to make a mix between <a class="link-in-text" href="https://store.steampowered.com/app/1794680/Vampire_Survivors/" target="_blank">Vampire Survivors</a> and <a class="link-in-text" href="https://store.steampowered.com/app/848350/Katamari_Damacy_REROLL/" target="_blank">Katamari Damacy</a>, where the player needs to eat the monsters all around to grow bigger and make enough point that they can feed themselves to the boss. They need to do so in time (2 minutes per round) otherwise it's game over.</p>
+            <p>Saudade is our <span class="text-highlight">master second year project</span>. It's still in progress as I'm writing those words, so <span class="text-highlight">everything here is work in progress</span> !</p>
+            <p>Since we are building a game that's mainly relying on a grid for it's level design, we decided that a tool for 3D grid edition would be needed. There are a few already on the asset store but you have to pay for most of them. </p>
+
+            <h3>3D Grid tool</h3>
+            <p>The main technical aspect of this project for me was designing a fitting tool for our level designer.</p>
             <div class="div-row" style="width: 100%; height: 40rem; margin-bottom: 1rem;">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/6FgNzS_TUoE?si=2EZeDYT8YBTZriit" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
