fix: changed nadir link to repo

--- a/html/projects/video-games/nadir-giant-hunter.html
+++ b/html/projects/video-games/nadir-giant-hunter.html
@@ -148,7 +148,7 @@
                 <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
                     <a class="external-link" href="https://boolti.itch.io/nadir" target="_blank" style="width: fit-content; margin: auto;">Discover the game</a>
                     <p style="margin: 10px;">-----------------------------</p>
-                    <a class="external-link" href="https://alvina-dr.itch.io/chase-tag-online" target="_blank" style="width: fit-content; margin: auto;">REPOSITORY</a>
+                    <a class="external-link" href="https://github.com/alvina-dr/nadir-giant-hunter-public" target="_blank" style="width: fit-content; margin: auto;">REPOSITORY</a>
 
                 </div>
             </div>
