--- a/html/projects/video-games/saudade.html
+++ b/html/projects/video-games/saudade.html
@@ -41,19 +41,12 @@
     <section id="blog-section" class="div-row">
         <div class="div-column">
             <p id="hashtags"><b>2024</b> <b>Unity</b> <b>Wwise</b></p>
+            <p>THIS PAGE IS WIP</p>
             <p>Saudade is our <span class="text-highlight">master second year project</span>. It's still in progress as I'm writing those words, so <span class="text-highlight">everything here is work in progress</span> !</p>
             <p>Since we are building a game that's mainly relying on a grid for it's level design, we decided that a tool for 3D grid edition would be needed. There are a few already on the asset store but you have to pay for most of them. </p>
 
             <h3>3D Grid tool</h3>
             <p>The main technical aspect of this project for me was designing a fitting tool for our level designer.</p>
-            <div class="div-row" style="width: 100%; height: 40rem; margin-bottom: 1rem;">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/6FgNzS_TUoE?si=2EZeDYT8YBTZriit" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
-            <p>Overall this was a really good experience, we ended up ranking 184th out of 7604, and we're pretty happy with the result.Many people enjoyed the game and it's always super cool to see people have fun with what you create :) </p>
-            <div class="div-row" style="width: 100%;">
-                <img src="../../../img/video-games/rolling-food-chain/rfc-gameplay.gif" style="width: 49%;">
-                <img src="../../../img/video-games/rolling-food-chain/rfc-intro.gif" style="width: 49%;">
-            </div> 
         </div>
 
         <div class="div-column">
@@ -62,12 +55,11 @@
                     <p class="project-window-title" id="project-id">PLAY</p>
                 </div>
                 <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
-                    <a class="external-link" href="https://zakkuu.itch.io/roll-the-food-chain" target="_blank">Discover the game</a>
+                    <a class="external-link" href="" target="_blank">Discover the game</a>
                 </div>
             </div>
 
             <div style="margin-top: 1rem;">
-                <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Rolling Food Chain has ranked 184 out of 7000+ for the <a href="https://twitter.com/hashtag/GMTK2024?src=hash&amp;ref_src=twsrc%5Etfw">#GMTK2024</a> jam with <a href="https://twitter.com/hookariagames?ref_src=twsrc%5Etfw">@hookariagames</a> and @NamedZak. Got 60 ratings and 39 comments, thanks a lot to everyone that played the game :)<br><br>This was a good summer ☀️ <a href="https://t.co/VFNimMBHno">pic.twitter.com/VFNimMBHno</a></p>&mdash; Alvina (@alvina_dr_) <a href="https://twitter.com/alvina_dr_/status/1828715402270007804?ref_src=twsrc%5Etfw">August 28, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </div>
     </section>
